[gd_scene load_steps=5 format=3 uid="uid://cq4u34dbfmm6x"]

[ext_resource type="Script" path="res://folder.gd" id="1_epdib"]
[ext_resource type="Texture2D" uid="uid://dylejxsfkosi5" path="res://sprites/hippieDrumsRecord.png" id="2_8qlvk"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ysqkc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aqp73"]
size = Vector2(86, 11)

[node name="Folder" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_epdib")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.292035, 0.220974, 0.102853, 1)
position = Vector2(0.333329, 20)
scale = Vector2(90.6667, 73.5)
texture = SubResource("CanvasTexture_ysqkc")

[node name="BackRecLead" type="Sprite2D" parent="."]
position = Vector2(0, 10)
scale = Vector2(0.14, 0.14)
texture = ExtResource("2_8qlvk")

[node name="MidRecBass" type="Sprite2D" parent="."]
position = Vector2(0, 18)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_8qlvk")

[node name="FrontRecDrums" type="Sprite2D" parent="."]
position = Vector2(0, 27)
scale = Vector2(0.16, 0.16)
texture = ExtResource("2_8qlvk")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.450302, 0.348051, 0.17866, 1)
position = Vector2(0.5, 35.75)
scale = Vector2(91.6667, 72.5)
texture = SubResource("CanvasTexture_ysqkc")

[node name="FrontArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrontArea"]
position = Vector2(-1, -3.5)
shape = SubResource("RectangleShape2D_aqp73")

[node name="MidArea" type="Area2D" parent="."]
position = Vector2(0, -12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MidArea"]
position = Vector2(-1, -3.5)
shape = SubResource("RectangleShape2D_aqp73")

[node name="BackArea" type="Area2D" parent="."]
position = Vector2(0, -24)

[node name="CollisionShape2D" type="CollisionShape2D" parent="BackArea"]
position = Vector2(-1, -3.5)
shape = SubResource("RectangleShape2D_aqp73")

[node name="Bass" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -26.0
offset_top = -61.0
offset_right = 95.0
offset_bottom = 8.0
scale = Vector2(0.4, 0.38)
theme_override_font_sizes/font_size = 50
text = "BASS
"

[node name="Drums" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -36.5
offset_top = -54.0
offset_right = 142.5
offset_bottom = 15.0
scale = Vector2(0.4, 0.38)
theme_override_font_sizes/font_size = 50
text = "DRUMS
"

[node name="Lead" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -25.5
offset_top = -68.0
offset_right = 99.5
offset_bottom = 1.0
scale = Vector2(0.4, 0.38)
theme_override_font_sizes/font_size = 50
text = "LEAD
"

[connection signal="mouse_entered" from="FrontArea" to="." method="_on_front_area_mouse_entered"]
[connection signal="mouse_exited" from="FrontArea" to="." method="_on_front_area_mouse_exited"]
[connection signal="mouse_entered" from="MidArea" to="." method="_on_mid_area_mouse_entered"]
[connection signal="mouse_exited" from="MidArea" to="." method="_on_mid_area_mouse_exited"]
[connection signal="mouse_entered" from="BackArea" to="." method="_on_back_area_mouse_entered"]
[connection signal="mouse_exited" from="BackArea" to="." method="_on_back_area_mouse_exited"]
